--- a/app.json
+++ b/app.json
@@ -4,8 +4,8 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarBackgroundColor": "#fb7730",
+    "navigationBarTitleText": "简易计算器",
+    "navigationBarTextStyle":"white"
   }
 }
